<resources>
    <string name="app_name">tagd</string>

    <string name="hello_world">Virtual Graffiti</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Log in</string>

    <string name="button_camera">New</string>
    <string name="image_cd_camera">Content Description Camera</string>

    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="new_frame">New Frame</string>
    <string name="MAP">Map</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_drawing_class">DrawingClass</string>
    <string name="photo_view">PhotoView</string>
</resources>
